// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Mock Client Pagination DataTable renders 1`] = `
<div
  className="container-fluid"
>
  <table
    className="table dataTable table-striped table-bordered table-hover"
    role="grid"
  >
    <thead>
      <tr>
        <th
          aria-label="Select all rows"
          className="table-view-pf-select"
          colSpan={1}
          index={0}
          rowSpan={1}
        >
          <label
            className="control-label sr-only"
            htmlFor="selectAll"
          >
            Select all rows
          </label>
          <input
            checked={false}
            id="selectAll"
            onChange={[Function]}
            type="checkbox"
          />
        </th>
        <th
          aria-label="Name"
          className="sorting_asc sort sort-asc"
          colSpan={1}
          index={1}
          onClick={[Function]}
          rowSpan={1}
        >
          Name
        </th>
        <th
          aria-label="Height"
          className="sorting sort sort-none"
          colSpan={1}
          index={2}
          onClick={[Function]}
          rowSpan={1}
        >
          Height
        </th>
        <th
          aria-label="Eye Color"
          className="sorting sort sort-none"
          colSpan={1}
          index={3}
          onClick={[Function]}
          rowSpan={1}
        >
          Eye Color
        </th>
        <th
          aria-label="Gender"
          className="sorting sort sort-none"
          colSpan={1}
          index={4}
          onClick={[Function]}
          rowSpan={1}
        >
          Gender
        </th>
        <th
          aria-label="Birth Year"
          className="sorting sort sort-none"
          colSpan={1}
          index={5}
          onClick={[Function]}
          rowSpan={1}
        >
          Birth Year
        </th>
        <th
          aria-label="Actions"
          className=""
          colSpan={2}
          index={6}
          rowSpan={1}
        >
          Actions
        </th>
      </tr>
    </thead>
    <tbody>
      <tr
        className=""
        role="row"
      >
        <td
          className="table-view-pf-select"
        >
          <label
            className="control-label sr-only"
            htmlFor="select0"
          >
            Select row 0
          </label>
          <input
            checked={undefined}
            id="select0"
            onChange={[Function]}
            type="checkbox"
          />
        </td>
        <td
          className=""
        >
          Anakin Skywalker
        </td>
        <td
          className=""
        >
          188
        </td>
        <td
          className=""
        >
          blue
        </td>
        <td
          className=""
        >
          male
        </td>
        <td
          className=""
        >
          41.9BBY
        </td>
        <td
          className="table-view-pf-actions"
        >
          <div
            className="table-view-pf-btn"
          >
            <button
              className="btn btn-default"
              disabled={false}
              onClick={[Function]}
              type="button"
            >
              Actions
            </button>
          </div>
        </td>
        <td
          className="table-view-pf-actions"
        >
          <div
            className="dropdown-kebab-pf dropdown btn-group"
          >
            <button
              aria-expanded={false}
              aria-haspopup={true}
              className="dropdown-toggle btn btn-link"
              disabled={false}
              id="myKebab"
              onClick={[Function]}
              onKeyDown={[Function]}
              role="button"
              type="button"
            >
              <span
                aria-hidden={true}
                className="fa fa-ellipsis-v"
              />
            </button>
            <ul
              aria-labelledby="myKebab"
              className="dropdown-menu dropdown-menu-right"
              role="menu"
            >
              <li
                className=""
                role="presentation"
                style={undefined}
              >
                <a
                  href="#"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  role="menuitem"
                  tabIndex="-1"
                >
                  Action
                </a>
              </li>
              <li
                className=""
                role="presentation"
                style={undefined}
              >
                <a
                  href="#"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  role="menuitem"
                  tabIndex="-1"
                >
                  Another Action
                </a>
              </li>
              <li
                className=""
                role="presentation"
                style={undefined}
              >
                <a
                  href="#"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  role="menuitem"
                  tabIndex="-1"
                >
                  Something else here
                </a>
              </li>
              <li
                className="divider"
                onKeyDown={[Function]}
                role="separator"
                style={undefined}
              />
              <li
                className=""
                role="presentation"
                style={undefined}
              >
                <a
                  href="#"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  role="menuitem"
                  tabIndex="-1"
                >
                  Separated link
                </a>
              </li>
            </ul>
          </div>
        </td>
      </tr>
      <tr
        className=""
        role="row"
      >
        <td
          className="table-view-pf-select"
        >
          <label
            className="control-label sr-only"
            htmlFor="select1"
          >
            Select row 1
          </label>
          <input
            checked={undefined}
            id="select1"
            onChange={[Function]}
            type="checkbox"
          />
        </td>
        <td
          className=""
        >
          Beru Whitesun lars
        </td>
        <td
          className=""
        >
          165
        </td>
        <td
          className=""
        >
          blue
        </td>
        <td
          className=""
        >
          female
        </td>
        <td
          className=""
        >
          47BBY
        </td>
        <td
          className="table-view-pf-actions"
        >
          <div
            className="table-view-pf-btn"
          >
            <button
              className="btn btn-default"
              disabled={false}
              onClick={[Function]}
              type="button"
            >
              Actions
            </button>
          </div>
        </td>
        <td
          className="table-view-pf-actions"
        >
          <div
            className="dropdown-kebab-pf dropdown btn-group"
          >
            <button
              aria-expanded={false}
              aria-haspopup={true}
              className="dropdown-toggle btn btn-link"
              disabled={false}
              id="myKebab"
              onClick={[Function]}
              onKeyDown={[Function]}
              role="button"
              type="button"
            >
              <span
                aria-hidden={true}
                className="fa fa-ellipsis-v"
              />
            </button>
            <ul
              aria-labelledby="myKebab"
              className="dropdown-menu dropdown-menu-right"
              role="menu"
            >
              <li
                className=""
                role="presentation"
                style={undefined}
              >
                <a
                  href="#"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  role="menuitem"
                  tabIndex="-1"
                >
                  Action
                </a>
              </li>
              <li
                className=""
                role="presentation"
                style={undefined}
              >
                <a
                  href="#"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  role="menuitem"
                  tabIndex="-1"
                >
                  Another Action
                </a>
              </li>
              <li
                className=""
                role="presentation"
                style={undefined}
              >
                <a
                  href="#"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  role="menuitem"
                  tabIndex="-1"
                >
                  Something else here
                </a>
              </li>
              <li
                className="divider"
                onKeyDown={[Function]}
                role="separator"
                style={undefined}
              />
              <li
                className=""
                role="presentation"
                style={undefined}
              >
                <a
                  href="#"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  role="menuitem"
                  tabIndex="-1"
                >
                  Separated link
                </a>
              </li>
            </ul>
          </div>
        </td>
      </tr>
      <tr
        className=""
        role="row"
      >
        <td
          className="table-view-pf-select"
        >
          <label
            className="control-label sr-only"
            htmlFor="select2"
          >
            Select row 2
          </label>
          <input
            checked={undefined}
            id="select2"
            onChange={[Function]}
            type="checkbox"
          />
        </td>
        <td
          className=""
        >
          Biggs Darklighter
        </td>
        <td
          className=""
        >
          183
        </td>
        <td
          className=""
        >
          brown
        </td>
        <td
          className=""
        >
          male
        </td>
        <td
          className=""
        >
          24BBY
        </td>
        <td
          className="table-view-pf-actions"
        >
          <div
            className="table-view-pf-btn"
          >
            <button
              className="btn btn-default"
              disabled={false}
              onClick={[Function]}
              type="button"
            >
              Actions
            </button>
          </div>
        </td>
        <td
          className="table-view-pf-actions"
        >
          <div
            className="dropdown-kebab-pf dropdown btn-group"
          >
            <button
              aria-expanded={false}
              aria-haspopup={true}
              className="dropdown-toggle btn btn-link"
              disabled={false}
              id="myKebab"
              onClick={[Function]}
              onKeyDown={[Function]}
              role="button"
              type="button"
            >
              <span
                aria-hidden={true}
                className="fa fa-ellipsis-v"
              />
            </button>
            <ul
              aria-labelledby="myKebab"
              className="dropdown-menu dropdown-menu-right"
              role="menu"
            >
              <li
                className=""
                role="presentation"
                style={undefined}
              >
                <a
                  href="#"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  role="menuitem"
                  tabIndex="-1"
                >
                  Action
                </a>
              </li>
              <li
                className=""
                role="presentation"
                style={undefined}
              >
                <a
                  href="#"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  role="menuitem"
                  tabIndex="-1"
                >
                  Another Action
                </a>
              </li>
              <li
                className=""
                role="presentation"
                style={undefined}
              >
                <a
                  href="#"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  role="menuitem"
                  tabIndex="-1"
                >
                  Something else here
                </a>
              </li>
              <li
                className="divider"
                onKeyDown={[Function]}
                role="separator"
                style={undefined}
              />
              <li
                className=""
                role="presentation"
                style={undefined}
              >
                <a
                  href="#"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  role="menuitem"
                  tabIndex="-1"
                >
                  Separated link
                </a>
              </li>
            </ul>
          </div>
        </td>
      </tr>
      <tr
        className=""
        role="row"
      >
        <td
          className="table-view-pf-select"
        >
          <label
            className="control-label sr-only"
            htmlFor="select3"
          >
            Select row 3
          </label>
          <input
            checked={undefined}
            id="select3"
            onChange={[Function]}
            type="checkbox"
          />
        </td>
        <td
          className=""
        >
          C-3PO
        </td>
        <td
          className=""
        >
          167
        </td>
        <td
          className=""
        >
          yellow
        </td>
        <td
          className=""
        >
          n/a
        </td>
        <td
          className=""
        >
          112BBY
        </td>
        <td
          className="table-view-pf-actions"
        >
          <div
            className="table-view-pf-btn"
          >
            <button
              className="btn btn-default"
              disabled={false}
              onClick={[Function]}
              type="button"
            >
              Actions
            </button>
          </div>
        </td>
        <td
          className="table-view-pf-actions"
        >
          <div
            className="dropdown-kebab-pf dropdown btn-group"
          >
            <button
              aria-expanded={false}
              aria-haspopup={true}
              className="dropdown-toggle btn btn-link"
              disabled={false}
              id="myKebab"
              onClick={[Function]}
              onKeyDown={[Function]}
              role="button"
              type="button"
            >
              <span
                aria-hidden={true}
                className="fa fa-ellipsis-v"
              />
            </button>
            <ul
              aria-labelledby="myKebab"
              className="dropdown-menu dropdown-menu-right"
              role="menu"
            >
              <li
                className=""
                role="presentation"
                style={undefined}
              >
                <a
                  href="#"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  role="menuitem"
                  tabIndex="-1"
                >
                  Action
                </a>
              </li>
              <li
                className=""
                role="presentation"
                style={undefined}
              >
                <a
                  href="#"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  role="menuitem"
                  tabIndex="-1"
                >
                  Another Action
                </a>
              </li>
              <li
                className=""
                role="presentation"
                style={undefined}
              >
                <a
                  href="#"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  role="menuitem"
                  tabIndex="-1"
                >
                  Something else here
                </a>
              </li>
              <li
                className="divider"
                onKeyDown={[Function]}
                role="separator"
                style={undefined}
              />
              <li
                className=""
                role="presentation"
                style={undefined}
              >
                <a
                  href="#"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  role="menuitem"
                  tabIndex="-1"
                >
                  Separated link
                </a>
              </li>
            </ul>
          </div>
        </td>
      </tr>
      <tr
        className=""
        role="row"
      >
        <td
          className="table-view-pf-select"
        >
          <label
            className="control-label sr-only"
            htmlFor="select4"
          >
            Select row 4
          </label>
          <input
            checked={undefined}
            id="select4"
            onChange={[Function]}
            type="checkbox"
          />
        </td>
        <td
          className=""
        >
          Chewbacca
        </td>
        <td
          className=""
        >
          228
        </td>
        <td
          className=""
        >
          blue
        </td>
        <td
          className=""
        >
          male
        </td>
        <td
          className=""
        >
          200BBY
        </td>
        <td
          className="table-view-pf-actions"
        >
          <div
            className="table-view-pf-btn"
          >
            <button
              className="btn btn-default"
              disabled={false}
              onClick={[Function]}
              type="button"
            >
              Actions
            </button>
          </div>
        </td>
        <td
          className="table-view-pf-actions"
        >
          <div
            className="dropdown-kebab-pf dropdown btn-group"
          >
            <button
              aria-expanded={false}
              aria-haspopup={true}
              className="dropdown-toggle btn btn-link"
              disabled={false}
              id="myKebab"
              onClick={[Function]}
              onKeyDown={[Function]}
              role="button"
              type="button"
            >
              <span
                aria-hidden={true}
                className="fa fa-ellipsis-v"
              />
            </button>
            <ul
              aria-labelledby="myKebab"
              className="dropdown-menu dropdown-menu-right"
              role="menu"
            >
              <li
                className=""
                role="presentation"
                style={undefined}
              >
                <a
                  href="#"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  role="menuitem"
                  tabIndex="-1"
                >
                  Action
                </a>
              </li>
              <li
                className=""
                role="presentation"
                style={undefined}
              >
                <a
                  href="#"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  role="menuitem"
                  tabIndex="-1"
                >
                  Another Action
                </a>
              </li>
              <li
                className=""
                role="presentation"
                style={undefined}
              >
                <a
                  href="#"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  role="menuitem"
                  tabIndex="-1"
                >
                  Something else here
                </a>
              </li>
              <li
                className="divider"
                onKeyDown={[Function]}
                role="separator"
                style={undefined}
              />
              <li
                className=""
                role="presentation"
                style={undefined}
              >
                <a
                  href="#"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  role="menuitem"
                  tabIndex="-1"
                >
                  Separated link
                </a>
              </li>
            </ul>
          </div>
        </td>
      </tr>
      <tr
        className=""
        role="row"
      >
        <td
          className="table-view-pf-select"
        >
          <label
            className="control-label sr-only"
            htmlFor="select5"
          >
            Select row 5
          </label>
          <input
            checked={undefined}
            id="select5"
            onChange={[Function]}
            type="checkbox"
          />
        </td>
        <td
          className=""
        >
          Darth Vader
        </td>
        <td
          className=""
        >
          202
        </td>
        <td
          className=""
        >
          yellow
        </td>
        <td
          className=""
        >
          male
        </td>
        <td
          className=""
        >
          41.9BBY
        </td>
        <td
          className="table-view-pf-actions"
        >
          <div
            className="table-view-pf-btn"
          >
            <button
              className="btn btn-default"
              disabled={false}
              onClick={[Function]}
              type="button"
            >
              Actions
            </button>
          </div>
        </td>
        <td
          className="table-view-pf-actions"
        >
          <div
            className="dropdown-kebab-pf dropdown btn-group"
          >
            <button
              aria-expanded={false}
              aria-haspopup={true}
              className="dropdown-toggle btn btn-link"
              disabled={false}
              id="myKebab"
              onClick={[Function]}
              onKeyDown={[Function]}
              role="button"
              type="button"
            >
              <span
                aria-hidden={true}
                className="fa fa-ellipsis-v"
              />
            </button>
            <ul
              aria-labelledby="myKebab"
              className="dropdown-menu dropdown-menu-right"
              role="menu"
            >
              <li
                className=""
                role="presentation"
                style={undefined}
              >
                <a
                  href="#"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  role="menuitem"
                  tabIndex="-1"
                >
                  Action
                </a>
              </li>
              <li
                className=""
                role="presentation"
                style={undefined}
              >
                <a
                  href="#"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  role="menuitem"
                  tabIndex="-1"
                >
                  Another Action
                </a>
              </li>
              <li
                className=""
                role="presentation"
                style={undefined}
              >
                <a
                  href="#"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  role="menuitem"
                  tabIndex="-1"
                >
                  Something else here
                </a>
              </li>
              <li
                className="divider"
                onKeyDown={[Function]}
                role="separator"
                style={undefined}
              />
              <li
                className=""
                role="presentation"
                style={undefined}
              >
                <a
                  href="#"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  role="menuitem"
                  tabIndex="-1"
                >
                  Separated link
                </a>
              </li>
            </ul>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
  <form
    className="content-view-pf-pagination table-view-pf-pagination clearfix "
  >
    <div
      className="form-group"
    >
      <div
        className="dropup pagination-pf-pagesize btn-group"
      >
        <button
          aria-expanded={false}
          aria-haspopup={true}
          className="dropdown-toggle btn btn-default"
          disabled={false}
          id="pagination-row-dropdown"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="button"
          type="button"
        >
          6
           
          <span
            className="caret"
          />
        </button>
        <ul
          aria-labelledby="pagination-row-dropdown"
          className="dropdown-menu"
          role="menu"
        >
          <li
            className="active"
            role="presentation"
            style={undefined}
          >
            <a
              href="#"
              onClick={[Function]}
              onKeyDown={[Function]}
              role="menuitem"
              tabIndex="-1"
            >
              6
            </a>
          </li>
          <li
            className=""
            role="presentation"
            style={undefined}
          >
            <a
              href="#"
              onClick={[Function]}
              onKeyDown={[Function]}
              role="menuitem"
              tabIndex="-1"
            >
              10
            </a>
          </li>
          <li
            className=""
            role="presentation"
            style={undefined}
          >
            <a
              href="#"
              onClick={[Function]}
              onKeyDown={[Function]}
              role="menuitem"
              tabIndex="-1"
            >
              15
            </a>
          </li>
        </ul>
      </div>
      <span>
         
        per page
         
      </span>
    </div>
    <div
      className="form-group"
    >
      <span>
        <span
          className="pagination-pf-items-current"
        >
          1
          -
          6
        </span>
         
        of
         
        <span
          className="pagination-pf-items-total"
        >
          20
        </span>
      </span>
      <ul
        className="pagination pagination-pf-back"
      >
        <li
          className="disabled"
        >
          <a
            href="#"
            onClick={[Function]}
            title="First Page"
          >
            <span
              aria-hidden={true}
              className="fa fa-angle-double-left"
            />
          </a>
        </li>
        <li
          className="disabled"
        >
          <a
            href="#"
            onClick={[Function]}
            title="Previous Page"
          >
            <span
              aria-hidden={true}
              className="fa fa-angle-left"
            />
          </a>
        </li>
      </ul>
      <label
        className="sr-only control-label"
        htmlFor={undefined}
      >
        Current Page
      </label>
      <input
        className="pagination-pf-page form-control"
        id={undefined}
        onChange={[Function]}
        type="text"
        value={1}
      />
      <span>
         
        of
         
        <span
          className="pagination-pf-pages"
        >
          4
        </span>
      </span>
      <ul
        className="pagination pagination-pf-forward"
      >
        <li
          className=""
        >
          <a
            href="#"
            onClick={[Function]}
            title="Next Page"
          >
            <span
              aria-hidden={true}
              className="fa fa-angle-right"
            />
          </a>
        </li>
        <li
          className=""
        >
          <a
            href="#"
            onClick={[Function]}
            title="Last Page"
          >
            <span
              aria-hidden={true}
              className="fa fa-angle-double-right"
            />
          </a>
        </li>
      </ul>
    </div>
  </form>
</div>
`;

exports[`Mock Server Pagination DataTable renders 1`] = `
<div
  className="container-fluid"
>
  <table
    className="table dataTable table-striped table-bordered table-hover"
    role="grid"
  >
    <thead>
      <tr>
        <th
          aria-label="Select all rows"
          className="table-view-pf-select"
          colSpan={1}
          index={0}
          rowSpan={1}
        >
          <label
            className="control-label sr-only"
            htmlFor="selectAll"
          >
            Select all rows
          </label>
          <input
            checked={true}
            id="selectAll"
            onChange={[Function]}
            type="checkbox"
          />
        </th>
        <th
          aria-label="Name"
          className="sorting_asc"
          colSpan={1}
          index={1}
          onClick={[Function]}
          rowSpan={1}
        >
          Name
        </th>
        <th
          aria-label="Height"
          className="sorting"
          colSpan={1}
          index={2}
          onClick={[Function]}
          rowSpan={1}
        >
          Height
        </th>
        <th
          aria-label="Eye Color"
          className="sorting"
          colSpan={1}
          index={3}
          onClick={[Function]}
          rowSpan={1}
        >
          Eye Color
        </th>
        <th
          aria-label="Gender"
          className="sorting"
          colSpan={1}
          index={4}
          onClick={[Function]}
          rowSpan={1}
        >
          Gender
        </th>
        <th
          aria-label="Birth Year"
          className="sorting"
          colSpan={1}
          index={5}
          onClick={[Function]}
          rowSpan={1}
        >
          Birth Year
        </th>
        <th
          aria-label="Actions"
          className=""
          colSpan={2}
          index={6}
          rowSpan={1}
        >
          Actions
        </th>
      </tr>
    </thead>
    <tbody />
  </table>
  <form
    className="content-view-pf-pagination table-view-pf-pagination clearfix "
  >
    <div
      className="form-group"
    >
      <div
        className="dropup pagination-pf-pagesize btn-group"
      >
        <button
          aria-expanded={false}
          aria-haspopup={true}
          className="dropdown-toggle btn btn-default"
          disabled={false}
          id="pagination-row-dropdown"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="button"
          type="button"
        >
          6
           
          <span
            className="caret"
          />
        </button>
        <ul
          aria-labelledby="pagination-row-dropdown"
          className="dropdown-menu"
          role="menu"
        >
          <li
            className="active"
            role="presentation"
            style={undefined}
          >
            <a
              href="#"
              onClick={[Function]}
              onKeyDown={[Function]}
              role="menuitem"
              tabIndex="-1"
            >
              6
            </a>
          </li>
          <li
            className=""
            role="presentation"
            style={undefined}
          >
            <a
              href="#"
              onClick={[Function]}
              onKeyDown={[Function]}
              role="menuitem"
              tabIndex="-1"
            >
              10
            </a>
          </li>
          <li
            className=""
            role="presentation"
            style={undefined}
          >
            <a
              href="#"
              onClick={[Function]}
              onKeyDown={[Function]}
              role="menuitem"
              tabIndex="-1"
            >
              15
            </a>
          </li>
        </ul>
      </div>
      <span>
         
        per page
         
      </span>
    </div>
    <div
      className="form-group"
    >
      <span>
        <span
          className="pagination-pf-items-current"
        >
          0
          -
          0
        </span>
         
        of
         
        <span
          className="pagination-pf-items-total"
        >
          0
        </span>
      </span>
      <ul
        className="pagination pagination-pf-back"
      >
        <li
          className="disabled"
        >
          <a
            href="#"
            onClick={[Function]}
            title="First Page"
          >
            <span
              aria-hidden={true}
              className="fa fa-angle-double-left"
            />
          </a>
        </li>
        <li
          className="disabled"
        >
          <a
            href="#"
            onClick={[Function]}
            title="Previous Page"
          >
            <span
              aria-hidden={true}
              className="fa fa-angle-left"
            />
          </a>
        </li>
      </ul>
      <label
        className="sr-only control-label"
        htmlFor={undefined}
      >
        Current Page
      </label>
      <input
        className="pagination-pf-page form-control"
        id={undefined}
        onChange={[Function]}
        type="text"
        value={1}
      />
      <span>
         
        of
         
        <span
          className="pagination-pf-pages"
        >
          0
        </span>
      </span>
      <ul
        className="pagination pagination-pf-forward"
      >
        <li
          className=""
        >
          <a
            href="#"
            onClick={[Function]}
            title="Next Page"
          >
            <span
              aria-hidden={true}
              className="fa fa-angle-right"
            />
          </a>
        </li>
        <li
          className=""
        >
          <a
            href="#"
            onClick={[Function]}
            title="Last Page"
          >
            <span
              aria-hidden={true}
              className="fa fa-angle-double-right"
            />
          </a>
        </li>
      </ul>
    </div>
  </form>
</div>
`;
